fixed spacing on chip selection

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -103,7 +103,7 @@
 }
 
 .chip-selection-container {
-  margin: 10px 0px 10px 0px;
+  margin: 10px 12px 10px 0px;
 }
 
 .chip .select {
